[package]
name = "g_rs_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.11"
chrono = "0.4"
colored = "2"


[[bin]]
name = "gls"
path = "bin/gls.rs"

[[bin]]
name = "grm"
path = "bin/grm.rs"