[package]
name = "g_rs_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.11"
chrono = "0.4"
colored = "2"
filetime = "0.2"


[[bin]]
name = "gls"
path = "bin/gls.rs"

[[bin]]
name = "grm"
path = "bin/grm.rs"

[[bin]]
name = "gwhich"
path = "bin/gwhich.rs"

[[bin]]
name = "gcat"
path = "bin/gcat.rs"

[[bin]]
name = "gtouch"
path = "bin/gtouch.rs"